--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 http://www.chessbin.com/archive
 
+Söka länge verkar knäcka databasen. Begränsa tänktid. Rensa helt efter varje? Då behövs ju inte command.
+
 Backa, starta flera gånger ger draw.
 
 50 move rule. Resetta vid bondedrag eller capture.
