--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,10 @@
-Buggar
-	- När svart börjar efter edit visas inte första draget. Andra buggar?
-	 
+Bug
+	Öppna fil som sparats med ett par drag back 
 Evaluation
 	- 50 move rule. Resetta vid bondedrag eller capture.
 	- Två löpare
 	- Bad bishops
-	- Kung skyddad i början	
+	- Kung på kanten i början	
 
 UI
 	- Move tostring anorlunda för svart.
