--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,9 @@
 Bug
-	Öppna fil som sparats med ett par drag back 
+	Öppna fil som sparats med ett par drag tillbaka
+
+
 Evaluation
+	- Flytta matt och stale, till set score
 	- 50 move rule. Resetta vid bondedrag eller capture.
 	- Två löpare
 	- Bad bishops
